# ProjetoCG

./: README.md  USAGE_COLLEAGUES.md  analysis.md  arrow_implementation.md  arrow_manager.py  config.py  dependencies.mdc  game.py  game_phases.py  keyframes.json  light.py  main.py  nightClub.py  p10-1.py  p10-2.py  p10-3.py  p10-4.py  p9-2.py  p9-3.py  phase_explanation.md  projeto.py  pyproject.toml  requirements.txt  uniform_explanation.md
.cursor/rules/: coding_standards.mdc  phases.mdc  (+3 more)
blendZE/: surdofinal.blend  surdofinal.blend1
core/: base.py  obj_reader2.py  uniform.py
core_ext/: object3d.py  renderer.py
cursor_rules/: dependencies.md  light_cone_implementation.md  phases.md  project_files.md  structure.md
extras/: movement_rig.py  spotlight.py  text_texture.py
geometry/: anainstrument.py  arrow.py  brandonMTL2.mtl  brandonOBJ.mtl  brandoninstrument.py  cone.py  miguelinstrument.py  nightClub.mtl  nightClub.py  ring.py  zeOBJ.bakmtl  zeinstrument.py
images/: metal.avif
keyframes/: keyframes_1.json  keyframes_2.json  keyframes_3.json  keyframes_lloraras.json
light/: light.py  spotlight.py
material/: cone_visual_frag.glsl  cone_visual_vert.glsl  flat.py  gbuffer_frag.glsl  gbuffer_vert.glsl  lambert.py  phong.py  ssao_blur_frag.glsl  ssao_blur_vert.glsl  ssao_composite_frag.glsl  ssao_frag.glsl  ssao_vert.glsl  surface.py
modules/: __init__.py  animation.py  instrument_loader.py  music_system.py  phase_manager.py  ui_manager.py
rules_to_edit/: coding_standards.md  light_cone_implementation.md  phases.md  project_files.md  structure.md
(+1 files in other folders)
